shuffle fixed by changing html layout, adding highscore, trying to fix mobile size bug

--- a/index.html
+++ b/index.html
@@ -29,83 +29,84 @@
         </div>
     </header>
 
-    <section class="main-page content">
-        <div class="container-fluid league-memorygame">
-            <div class="row">
-                <div class="col-1 sidebar"></div>
-            </div>
+    <section class="main-page content container-fluid">
 
-            <div class="information">
+        <div class="information row justify-content-center">
+            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-1"></div>
+
+            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-10">
                 <div>This is a game to test and train your memory! Pick the difficulty that you would like to play at in the navigation menu above and play!</div>
                 <div>The goal is to match the League of Legends champions. Try and see how it works below!</div>
             </div>
 
-            <ul>
-                <li class="resettry"><button class="resetbutton">Reset</button></li>
-                <li class="resettry"><div>Tries: <a id="tries">0</a></div></li>
-            </ul>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-1"></div>
+        </div>
 
-            <div class="index-board">
-                <div class="row justify-content-md-center">
-                    <div class="col-sm-3 col-lg-1 card">
+        <ul class="row justify-content-center">
+            <li class="resettry"><button class="resetbutton">Reset</button></li>
+            <li class="resettry"><div>Tries: <a id="tries">0</a></div></li>
+        </ul>
+
+        <div class="justify-content-center row">
+            <div id="highscoreview"></div>
+        </div>
+
+        <div class="row league-memorygame">
+
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4 index-board container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/ahri.jpg" data-image="ahri" alt="ahri">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/akali.jpg" alt="akali" data-image="akali">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/brand.jpg" alt="brand" data-image="brand">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                </div>
 
-                <div class="row justify-content-md-center">
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/katarina.jpg" alt="katarina" data-image="katarina">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/pyke.jpg" alt="pyke" data-image="pyke">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                </div>
 
-                <div class="row justify-content-md-center">
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/pyke.jpg" alt="pyke" data-image="pyke">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/katarina.jpg" alt="katarina" data-image="katarina">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/garen.jpg" alt="garen" data-image="garen">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                </div>
 
-                <div class="row justify-content-md-center">
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/brand.jpg" alt="brand" data-image="brand">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/ahri.jpg" alt="ahri" data-image="ahri">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
-                    <div class="col-sm-3 col-lg-1 card">
+                    <div class="col-xs-3 col-sm-3  offset-md-2 offset-lg-4 card">
                     <img class="frontside" src="assets/images/akali.jpg" alt="akali" data-image="akali">
                     <img class="backside" src="assets/images/cardhome.png" alt="icon">
                     </div>
                 </div>
-                <div class="col-1 sidebar"></div>
 
                 <div id="myBtn"></div>
                 <div id="myModal" class="modal">
@@ -113,6 +114,7 @@
                         <p>Congratulations! You have beaten this level in <span id="victry"></span> times!</p>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
