easy, medium and hard pages updated and added cards and layout, highscore fixed

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ul>
 
         <div class="justify-content-center row">
-            <div id="highscoreview"></div>
+            <div class="score">Your personal highscore is: <a id="highscoreview"></a></div>
         </div>
 
         <div class="row league-memorygame">
@@ -111,7 +111,7 @@
                 <div id="myBtn"></div>
                 <div id="myModal" class="modal">
                     <div class="modal-content">
-                        <p>Congratulations! You have beaten this level in <span id="victry"></span> times!</p>
+                        <p>Congratulations! You have beaten this level in <span id="victry"></span> tries!</p>
                     </div>
                 </div>
 
