--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ul>
 
         <div class="justify-content-center row">
-            <div class="score">Your personal highscore is: <a id="highscoreview"></a></div>
+            <div class="score">Your personal highscore is: <a id="homehighscoreview"></a></div>
         </div>
 
         <div class="row league-memorygame">
