--- a/medium.html
+++ b/medium.html
@@ -45,7 +45,7 @@
         </ul>
 
         <div class="justify-content-center row">
-            <div class="score">Your personal highscore is: <a id="highscoreview"></a></div>
+            <div class="score">Your personal highscore is: <a id="mediumhighscoreview"></a></div>
         </div>
 
         <div class="row league-memorygame">
